--- a/pizza-project/src/style.css
+++ b/pizza-project/src/style.css
@@ -72,3 +72,20 @@ footer {
     text-align: center;
     margin-bottom: 20px;
 }
+
+button {
+    background-color: #edc84b;
+    color: white;
+    padding: 8px 18px;
+    border: transparent;
+    border-radius: 8px;
+    margin-top: 10px;
+    font-weight: 700;
+    font-size: 20px;
+    cursor: pointer;
+    transition: ease 1s;
+}
+
+button:hover {
+    transform: scale(1.1,1.1);
+}
